{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 3,
  "lineage": "cab6a6b9-0651-b880-00a6-a8ecc1795ba5",
  "resources": [
    {
      "module": "module.monitoring.module.computer",
      "mode": "managed",
      "type": "aws_instance",
      "name": "myec2vm",
      "provider": "module.monitoring.module.computer.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d52ddcdf3a885741",
            "arn": "arn:aws:ec2:us-east-1:225908212644:instance/i-09b01a803e9bfafdd",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ssm-ec2",
            "id": "i-09b01a803e9bfafdd",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "live_keys",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": true,
            "primary_network_interface_id": "eni-042840dd9878b65a5",
            "private_dns": "ip-10-0-0-25.ec2.internal",
            "private_ip": "10.0.0.25",
            "public_ip": "34.224.25.97",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-044da49b19392db41",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c3f6738393a001da",
            "tags": {
              "Name": "EC2 Demo"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01c3cbeda1902ccba",
              "sg-0375378dd88e9a884"
            ]
          },
          "dependencies": [
            "module.monitoring.module.computer.data.aws_ami.amzlinux2",
            "module.monitoring.module.computer.module.SSM_agent.aws_iam_instance_profile.profile",
            "module.monitoring.module.computer.module.SSM_agent.aws_iam_role.ssm_role",
            "module.monitoring.module.computer.module.network.aws_security_group.vpc-ssh",
            "module.monitoring.module.computer.module.network.aws_security_group.web-traffic",
            "module.monitoring.module.computer.module.network.aws_subnet.custom_subnet",
            "module.monitoring.module.computer.module.network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.monitoring.module.computer.module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW-TF",
      "provider": "module.monitoring.module.computer.module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:225908212644:internet-gateway/igw-0f493ccdabdd34cfd",
            "id": "igw-0f493ccdabdd34cfd",
            "owner_id": "225908212644",
            "vpc_id": "vpc-02ccf4e3d5c0834af"
          },
          "dependencies": [
            "module.monitoring.module.computer.module.network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.monitoring.module.computer.module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc-ssh",
      "provider": "module.monitoring.module.computer.module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:225908212644:security-group/sg-0375378dd88e9a884",
            "description": "Allow SSH traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0375378dd88e9a884",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH traffic Inbound",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "vpc-ssh",
            "name_prefix": "",
            "owner_id": "225908212644",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow SSH Traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-02ccf4e3d5c0834af"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.monitoring.module.computer.module.network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.monitoring.module.computer.module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web-traffic",
      "provider": "module.monitoring.module.computer.module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:225908212644:security-group/sg-01c3cbeda1902ccba",
            "description": "Allow WEB traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01c3cbeda1902ccba",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Secure WEB traffic Inbound",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow WEB traffic Inbound",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "vpc-web",
            "name_prefix": "",
            "owner_id": "225908212644",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow WEB Traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-02ccf4e3d5c0834af"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.monitoring.module.computer.module.network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.monitoring.module.computer.module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "custom_subnet",
      "provider": "module.monitoring.module.computer.module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:225908212644:subnet/subnet-0c3f6738393a001da",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0c3f6738393a001da",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "225908212644",
            "tags": {
              "Name": "Custom subnet"
            },
            "tags_all": {
              "Name": "Custom subnet"
            },
            "vpc_id": "vpc-02ccf4e3d5c0834af"
          },
          "dependencies": [
            "module.monitoring.module.computer.module.network.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.monitoring.module.computer.module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "module.monitoring.module.computer.module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:225908212644:vpc/vpc-02ccf4e3d5c0834af",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f22914d6c76e44cd",
            "default_route_table_id": "rtb-0d15e3d1415e2d90d",
            "default_security_group_id": "sg-0dc8af8eccdeeccf3",
            "dhcp_options_id": "dopt-ff341285",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-02ccf4e3d5c0834af",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d15e3d1415e2d90d",
            "owner_id": "225908212644",
            "tags": {
              "Name": "Custom VPC"
            },
            "tags_all": {
              "Name": "Custom VPC"
            }
          }
        }
      ]
    }
  ]
}